--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,5 +11,5 @@ jobs:
           go-version: '1.23.3'
       - name: Test app
         run: go run main.go
-        working-directory: yadro-test/cmd/service
+        working-directory: cmd/service
 
