--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,7 +1,7 @@
 name: check
 on: push
 jobs:
-  prep:
+  checking:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -9,7 +9,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.23.3'
-      - name: Test app
+      - name: Run app
         run: go run main.go
         working-directory: cmd/service
 
